--- a/templates/board.html
+++ b/templates/board.html
@@ -90,7 +90,7 @@
         <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">
   
         <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column overflow-scroll align-items-start w-100 px-2 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+        <section class="d-flex flex-column overflow-scroll align-items-start w-100 px-3 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
             
             {% macro count_replies(replies, c=namespace(value=0)) %}
                 
@@ -190,8 +190,8 @@
                 <!-- Thread -->
                 <div class="d-flex gap-1">
                     {% if thread.image %}
-                        <div class="d-flex flex-column justify-content-start" style="max-width: 250px;">
-                            <img class="rounded-1" style="width: 100%; height: auto; max-height: 400px;" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
+                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: 400px;">
+                            <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
                             <div class="d-flex gap-1">
                                 <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                                 <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
