--- a/templates/board.html
+++ b/templates/board.html
@@ -14,10 +14,10 @@
     <nav class="chan-nav d-flex w-100 border-bottom py-1" style="height: fit-content;">
         <ul class="d-flex gap-2 w-100 px-2 list-unstyled m-0" style="height: fit-content; width: max-content;">
             {% for board in boards %}
-                <a href="{{ url_for('Boards.Board', id=board.id) }}" title="{{ board.name }}" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">/{{ board.id }}</a>
+                <a href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=board.id, **({'api_key': api_key} if api_key else {})) }}" title="{{ board.name }}" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">/{{ board.id }}</a>
             {% endfor %}
         </ul>
-        <a href="{{ url_for('Index.home') }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
+        <a href="{{ url_for('Admin.home' if api_key else 'Index.home', **({'api_key': api_key} if api_key else {})) }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
     </nav>
     <main class="d-flex w-100 flex-column align-items-center" style="height: fit-content;">
         <div class="chan-title d-flex justify-content-between border-bottom border-black fw-bold align-items-center align-content-center gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent);">
@@ -177,7 +177,7 @@
                     
                     {% if count.value >= 5 and not rendered.flag %}
                         {% set rendered.flag = True %}
-                        <a href="{{ url_for('Threads.Thread', id=thread.id) }}" style="margin-left: {{ 20 * level }}px;">See all {{ count_replies(thread.replies) }} replies</a>  
+                        <a href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="margin-left: {{ 20 * level }}px;">See all {{ count_replies(thread.replies) }} replies</a>  
                     {% endif %}      
 
                 {% endfor %}
@@ -203,7 +203,7 @@
                         
                         <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
                             <div class="d-flex gap-2">
-                                <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Threads.Thread', id=thread.id) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
+                                <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                 <div class="d-flex flex-column justify-content-around">
                                     <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">User: {{ thread.user_token }}</p>
                                     <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
