--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-    <title>πchan</title>
+    <title>πchan{{ ' - Admin' if api_key}}</title>
 </head>
 <body class="chan-bg d-flex flex-column align-items-center" style="height: fit-content;">
     
     <main class="d-flex px-3 w-100 flex-column align-items-center py-3" style="height: fit-content;">
-        <h1 class="chan-title d-flex"><p class="text-success fst-italic">π</p>chan</h1>
-
+        <div class="d-flex flex-column align-content-center justify-content-center align-items-center" style="min-height: 100px; margin-bottom: 0.5rem;">
+            <h1 class="chan-title d-flex m-0"><p class="text-success fst-italic m-0">π</p>chan</h1>
+            {% if api_key %}
+                <p class="text-white font-monospace m-0" style="letter-spacing: 2px;">Administrator</p>
+            {% endif %}    
+        </div>
+        
         <h2 class="d-flex align-items-center fst-italic text-white w-100 m-0" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Boards:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
         <section class="chan-index-section" id="boards">
             {% for board_group in board_groups %}
@@ -23,21 +28,27 @@
                         <a 
                             style="font-size: 15px;" 
                             class="mx-1" 
-                            href="{{ url_for('Boards.Board', id=board.id) }}">
+                            href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=board.id, **({'api_key': api_key} if api_key else {})) }}">
                             /{{ board.id + ' - ' + board.name }}
                         </a>
                     {% endfor %}
+
                     
                 </div>
             {% endfor %}
         </section>
 
-        {% if admin %}
+        {% if api_key %}
             <div class="d-flex gap-1 w-100" style="max-width: 800px; margin-top: 0.2rem;">
                 <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#newBoardGroup">+ New Board Group</button>
                 <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#newBoard">+ New Board</button>
             </div>
+            <div class="d-flex gap-1 w-100" style="max-width: 800px; margin-top: 0.3rem;">
+                <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#deleteBoardGroup">- Delete Board Group</button>
+                <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#deleteBoard">- Delete Board</button>
+            </div>
 
+            <!-- New Board Group Modal -->
             <div class="modal fade" id="newBoardGroup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" data-bs-theme="dark">
                     <div class="modal-content chan-admin-modal">
@@ -61,7 +72,8 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="newBoard" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- Delete Board Group Modal -->
+            <div class="modal fade" id="deleteBoardGroup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" data-bs-theme="dark">
                     <div class="modal-content chan-admin-modal">
                         <div class="modal-header" style="border-color: #5e5e5e;">
@@ -71,8 +83,37 @@
                         <div class="modal-body">
                             <form class="d-flex flex-column gap-2" action="" method="POST">
                                 
+                                <select id="delete_board_group_id">
+                                        <option value="" hidden selected disabled >Board Group</option>
+                                    {% for board_group in board_groups %}
+                                        <option value="{{ board_group.id }}">{{ board_group.name }}</option>
+                                    {% endfor %}
+                                </select>
+                                <input type="text" placeholder="API KEY" id="delete_board_group_api_key">
+    
+                            </form>
+                        </div>
+                        <div class="modal-footer" style="border-color: #5e5e5e;">
+                            <button type="button" class=" chan-admin-button w-100" style="max-width: 80px;" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class=" chan-admin-button w-100" style="max-width: 200px;" onclick="deleteBoardGroup()">Delete Board Group</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- New Board Modal -->
+            <div class="modal fade" id="newBoard" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" data-bs-theme="dark">
+                    <div class="modal-content chan-admin-modal">
+                        <div class="modal-header" style="border-color: #5e5e5e;">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Board data:</h1>
+                        <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form class="d-flex flex-column gap-2" action="" method="POST">
+                                
                                 <select id="board_group_id">
-                                        <option disabled>Board Group</option>
+                                        <option value="" hidden selected disabled>Board Group</option>
                                     {% for board_group in board_groups %}
                                         <option value="{{ board_group.id }}">{{ board_group.name }}</option>
                                     {% endfor %}
@@ -87,6 +128,36 @@
                         <div class="modal-footer" style="border-color: #5e5e5e;">
                             <button type="button" class=" chan-admin-button w-100" style="max-width: 80px;" data-bs-dismiss="modal">Close</button>
                             <button type="button" class=" chan-admin-button w-100" style="max-width: 200px;" onclick="newBoard()">Create Board</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Delete Board Modal -->
+            <div class="modal fade" id="deleteBoard" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" data-bs-theme="dark">
+                    <div class="modal-content chan-admin-modal">
+                        <div class="modal-header" style="border-color: #5e5e5e;">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Board data:</h1>
+                        <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form class="d-flex flex-column gap-2" action="" method="POST">
+                                
+                                <select id="delete_board_id">
+                                        <option value="" hidden selected disabled>Board</option>
+                                    {% for board in boards %}
+                                        <option value="{{ board.id }}">{{ board.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            
+                                <input type="text" placeholder="API KEY" id="delete_board_api_key">
+    
+                            </form>
+                        </div>
+                        <div class="modal-footer" style="border-color: #5e5e5e;">
+                            <button type="button" class=" chan-admin-button w-100" style="max-width: 80px;" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class=" chan-admin-button w-100" style="max-width: 200px;" onclick="deleteBoard()">Create Board</button>
                         </div>
                     </div>
                 </div>
@@ -113,8 +184,8 @@
         
                         {% if ns.most_voted_thread %}
                             <div class="d-flex flex-column align-items-center" style="max-width: 175px; max-height: 275px;">
-                                <a href="{{ url_for('Boards.Board', id=ns.most_voted_thread.board.id) }}" class="chan-title text-decoration-underline fw-bold m-0 py-1" style="font-size: 0.9rem;">{{ board.name }}</a>
-                                <a href="{{ url_for('Threads.Thread', id=ns.most_voted_thread.id) }}" title="{{ ns.most_voted_thread.title }}">
+                                <a href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=ns.most_voted_thread.board.id, **({'api_key': api_key} if api_key else {})) }}" class="chan-title text-decoration-underline fw-bold m-0 py-1" style="font-size: 0.9rem;">{{ board.name }}</a>
+                                <a href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=ns.most_voted_thread.id, **({'api_key': api_key} if api_key else {})) }}" title="{{ ns.most_voted_thread.title }}">
                                     <img style="max-width: 150px; max-height: 150px; border: 1px solid rgb(66, 212, 144); background: rgba(0, 255, 234, 0.05);" src="{{ url_for('Images.Image', id=ns.most_voted_thread.image.id) }}" alt="">
                                 </a>
                                 <p class="ellipsis-multiline text-white">
@@ -140,17 +211,23 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    {% if admin %}
+    {% if api_key %}
         <script>
 
+            document.getElementById('board_group_id').value = ''
             document.getElementById('new_board_id_id').value = ''
             document.getElementById('new_board_name_id').value = ''
             document.getElementById('new_board_desc_id').value = ''
-            document.getElementById('board_group_id').value = 'Board Group'
-            const apiKey = document.getElementById('new_board_group_api_key').value = ''
+            document.getElementById('new_board_group_api_key').value = ''
 
             document.getElementById('new_board_group_name').value = ''
             document.getElementById('new_board_api_key').value = ''
+
+            document.getElementById('delete_board_group_id').value = ''
+            document.getElementById('delete_board_group_api_key').value = ''
+
+            document.getElementById('delete_board_id').value = ''
+            document.getElementById('delete_board_api_key').value = ''
 
             async function newBoardGroup(){
 
@@ -165,6 +242,29 @@
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify(newBoardGroupData),
+                });
+
+                if (!response.ok) {
+                    throw new Error(`Server error: ${response.status}`);
+                }
+
+                const responseData = await response.json();
+
+                location.reload()
+            }
+
+            async function deleteBoardGroup(){
+
+                
+                id = document.getElementById('delete_board_group_id').value
+                
+
+                const apiKey = document.getElementById('delete_board_group_api_key').value
+                const response = await fetch(`/board_group/${id}?api_key=${apiKey}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    }
                 });
 
                 if (!response.ok) {
@@ -218,6 +318,28 @@
                 }
             }
 
+            async function deleteBoard(){
+
+                
+                id = document.getElementById('delete_board_id').value
+
+
+                const apiKey = document.getElementById('delete_board_api_key').value
+                const response = await fetch(`/board/${id}?api_key=${apiKey}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error(`Server error: ${response.status}`);
+                }
+
+                const responseData = await response.json();
+
+                location.reload()
+            }
         </script>
     {% endif %}    
 
