--- a/static/css/board.css
+++ b/static/css/board.css
@@ -60,6 +60,17 @@
     padding: 10px 15px;
 }
 
+.chan-admin-thread-info{
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 83, 122, 0.1);
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 83, 122, 0.8);
+    border-radius: 3px;
+    height: fit-content;
+    padding: 10px 15px;
+}
+
 .chan-thread-modal{
     border-style: solid;
     border-width: 1px;
